Update website content and styling: replaced logo across multiple pages, added course links, and improved contact form functionality. Removed developer info and mail handler files. Enhanced CSS for success and error messages.

--- a/classes.html
+++ b/classes.html
@@ -38,19 +38,19 @@
         <div class="container">
           <div class="header-content d-flex flex-wrap align-items-center">
             <div class="logo">
-              <a href="index.html" title="">
-                <img
-                  src="assets/img/logo.png"
-                  alt=""
-                  srcset="assets/img/01_Logo_2x.png 2x"
-                />
-              </a>
+                              <a href="index.html" title="">
+                  <img
+                    src="assets/img/CCGE Final Logo.png"
+                    alt="CCGE - Corporate Commerce Global Education"
+                    style="max-height: 60px; width: auto;"
+                  />
+                </a>
             </div>
             <!--logo end-->
             <ul class="contact-add d-flex flex-wrap">
               <li>
                 <div class="contact-info">
-                  <img src="assets/img/icon1.png" alt="" />
+                  <img src="assets/img/icon1.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                   <div class="contact-tt">
                     <h4>Call</h4>
                     <span>+91 7022878870</span>
@@ -60,7 +60,7 @@
               </li>
               <li>
                 <div class="contact-info">
-                  <img src="assets/img/icon2.png" alt="" />
+                  <img src="assets/img/icon2.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                   <div class="contact-tt">
                     <h4>Work Time</h4>
                     <span>Mon - Sat 9 AM - 7 PM</span>
@@ -70,7 +70,7 @@
               </li>
               <li>
                 <div class="contact-info">
-                  <img src="assets/img/icon3.png" alt="" />
+                  <img src="assets/img/icon3.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                   <div class="contact-tt">
                     <h4>Address</h4>
                     <span>Mumbai, Delhi, Pune, Bangalore</span>
@@ -178,7 +178,7 @@
                         class="w-100"
                       />
                       <a href="#" title="" class="crt-btn">
-                        <img src="assets/img/icon10.png" alt="" />
+                        <img src="assets/img/icon10.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                       </a>
                     </div>
                     <div class="class-info">
@@ -193,7 +193,7 @@
                       <p>ACCA course equips students with global accounting and finance expertise, opening doors to a range of career opportunities worldwide. Join 200,000+ professionals globally.</p>
                       <div class="d-flex flex-wrap align-items-center">
                         <div class="posted-by">
-                          <img src="https://via.placeholder.com/26x26" alt="" />
+                          <img src="https://via.placeholder.com/26x26" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                           <a href="#" title="">ACCA Professionals</a>
                         </div>
                       </div>
@@ -214,7 +214,7 @@
                         class="w-100"
                       />
                       <a href="#" title="" class="crt-btn">
-                        <img src="assets/img/icon10.png" alt="" />
+                        <img src="assets/img/icon10.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                       </a>
                     </div>
                     <div class="class-info">
@@ -228,7 +228,7 @@
                       <p>The CFA program prepares students for a career in investment management and financial analysis, with a globally recognized curriculum. Join the elite 1% of finance professionals.</p>
                       <div class="d-flex flex-wrap align-items-center">
                         <div class="posted-by">
-                          <img src="https://via.placeholder.com/26x26" alt="" />
+                          <img src="https://via.placeholder.com/26x26" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                           <a href="#" title="">CFA Charterholders</a>
                         </div>
                       </div>
@@ -249,7 +249,7 @@
                         class="w-100"
                       />
                       <a href="#" title="" class="crt-btn">
-                        <img src="assets/img/icon10.png" alt="" />
+                        <img src="assets/img/icon10.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                       </a>
                     </div>
                     <div class="class-info">
@@ -263,7 +263,7 @@
                       <p>US CMA course is a globally accepted management accounting qualification offered by the Institute for Management Accountants, USA. Fast-track your career in strategic finance.</p>
                       <div class="d-flex flex-wrap align-items-center">
                         <div class="posted-by">
-                          <img src="https://via.placeholder.com/26x26" alt="" />
+                          <img src="https://via.placeholder.com/26x26" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                           <a href="#" title="">CMA Professionals</a>
                         </div>
                       </div>
@@ -284,7 +284,7 @@
                         class="w-100"
                       />
                       <a href="#" title="" class="crt-btn">
-                        <img src="assets/img/icon10.png" alt="" />
+                        <img src="assets/img/icon10.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                       </a>
                     </div>
                     <div class="class-info">
@@ -298,7 +298,7 @@
                       <p>CPA is a globally recognized Chartered Accountancy course by AICPA, USA. It offers excellent career opportunities in India and abroad in accounting, auditing, and finance.</p>
                       <div class="d-flex flex-wrap align-items-center">
                         <div class="posted-by">
-                          <img src="https://via.placeholder.com/26x26" alt="" />
+                          <img src="https://via.placeholder.com/26x26" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                           <a href="#" title="">CPA Professionals</a>
                         </div>
                       </div>
@@ -319,7 +319,7 @@
                         class="w-100"
                       />
                       <a href="#" title="" class="crt-btn">
-                        <img src="assets/img/icon10.png" alt="" />
+                        <img src="assets/img/icon10.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                       </a>
                     </div>
                     <div class="class-info">
@@ -333,7 +333,7 @@
                       <p>FRM by the Global Association of Risk Professionals (GARP, USA) is designed to equip professionals to manage business risks. Become a certified risk management expert.</p>
                       <div class="d-flex flex-wrap align-items-center">
                         <div class="posted-by">
-                          <img src="https://via.placeholder.com/26x26" alt="" />
+                          <img src="https://via.placeholder.com/26x26" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                           <a href="#" title="">Risk Management Experts</a>
                         </div>
                       </div>
@@ -354,7 +354,7 @@
                         class="w-100"
                       />
                       <a href="#" title="" class="crt-btn">
-                        <img src="assets/img/icon10.png" alt="" />
+                        <img src="assets/img/icon10.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                       </a>
                     </div>
                     <div class="class-info">
@@ -368,7 +368,7 @@
                       <p>ESG certification is about companies focusing on making money and being good to the planet and running their businesses transparently and ethically.</p>
                       <div class="d-flex flex-wrap align-items-center">
                         <div class="posted-by">
-                          <img src="https://via.placeholder.com/26x26" alt="" />
+                          <img src="https://via.placeholder.com/26x26" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                           <a href="#" title="">Sustainability Experts</a>
                         </div>
                       </div>
@@ -389,7 +389,7 @@
                         class="w-100"
                       />
                       <a href="#" title="" class="crt-btn">
-                        <img src="assets/img/icon10.png" alt="" />
+                        <img src="assets/img/icon10.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                       </a>
                     </div>
                     <div class="class-info">
@@ -403,7 +403,7 @@
                       <p>The Investment Banking course provides essential skills and hands-on training for a successful career in financial analysis and deal structuring.</p>
                       <div class="d-flex flex-wrap align-items-center">
                         <div class="posted-by">
-                          <img src="https://via.placeholder.com/26x26" alt="" />
+                          <img src="https://via.placeholder.com/26x26" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                           <a href="#" title="">Investment Banking Experts</a>
                         </div>
                       </div>
@@ -424,7 +424,7 @@
                         class="w-100"
                       />
                       <a href="#" title="" class="crt-btn">
-                        <img src="assets/img/icon10.png" alt="" />
+                        <img src="assets/img/icon10.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                       </a>
                     </div>
                     <div class="class-info">
@@ -439,7 +439,7 @@
                       <p>IFRS certification stands for International Financial Reporting Standards, is a universally recognised accounting standard.</p>
                       <div class="d-flex flex-wrap align-items-center">
                         <div class="posted-by">
-                          <img src="https://via.placeholder.com/26x26" alt="" />
+                          <img src="https://via.placeholder.com/26x26" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                           <a href="#" title="">IFRS Specialists</a>
                         </div>
                       </div>
@@ -460,7 +460,7 @@
                         class="w-100"
                       />
                       <a href="#" title="" class="crt-btn">
-                        <img src="assets/img/icon10.png" alt="" />
+                        <img src="assets/img/icon10.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                       </a>
                     </div>
                     <div class="class-info">
@@ -474,7 +474,7 @@
                       <p>GIB - Global Investment Banking empowers you to master deals, mergers, and financial advisory with global career opportunities.</p>
                       <div class="d-flex flex-wrap align-items-center">
                         <div class="posted-by">
-                          <img src="https://via.placeholder.com/26x26" alt="" />
+                          <img src="https://via.placeholder.com/26x26" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                           <a href="#" title="">Global Banking Experts</a>
                         </div>
                       </div>
@@ -583,7 +583,7 @@
             <div class="row">
               <div class="col-lg-3 col-md-6 col-sm-6">
                 <div class="widget widget-about">
-                  <img src="assets/img/logo.png" alt="" />
+                  <img src="assets/img/CCGE Final Logo.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                   <p>
                     Vivamus porta efficitur nibh nec convallis. Vestibulum
                     egestas eleifend justo. Ut tellus ipsum, accumsan
@@ -596,7 +596,7 @@
                   <ul class="contact-add">
                     <li>
                       <div class="contact-info">
-                        <img src="assets/img/icon1.png" alt="" />
+                        <img src="assets/img/icon1.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                         <div class="contact-tt">
                           <h4>Call</h4>
                           <span>+2 342 5446 67</span>
@@ -606,7 +606,7 @@
                     </li>
                     <li>
                       <div class="contact-info">
-                        <img src="assets/img/icon2.png" alt="" />
+                        <img src="assets/img/icon2.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                         <div class="contact-tt">
                           <h4>Work Time</h4>
                           <span>Mon - Fri 8 AM - 5 PM</span>
@@ -616,7 +616,7 @@
                     </li>
                     <li>
                       <div class="contact-info">
-                        <img src="assets/img/icon3.png" alt="" />
+                        <img src="assets/img/icon3.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                         <div class="contact-tt">
                           <h4>Address</h4>
                           <span>Franklin St, Greenpoint Ave</span>
@@ -630,17 +630,17 @@
               </div>
               <div class="col-lg-3 col-md-6 col-sm-6">
                 <div class="widget widget-links">
-                  <h3 class="widget-title">Quick Links</h3>
+                  <h3 class="widget-title">Our Courses</h3>
                   <ul>
-                    <li><a href="about.html" title="">About Us </a></li>
-                    <li><a href="classes.html" title="">Our Classes</a></li>
-                    <li>
-                      <a href="teachers.html" title="">School Teachers </a>
-                    </li>
-                    <li><a href="events.html" title="">Recent Events </a></li>
-                    <li><a href="blog.html" title="">Our News </a></li>
-                    <li><a href="schedule.html" title="">Schedule </a></li>
-                  </ul>
+                    <li><a href="class-single-acca.html" title="">ACCA Course</a></li>
+                    <li><a href="class-single-cfa.html" title="">CFA Course</a></li>
+                    <li><a href="class-single-cma.html" title="">CMA Course</a></li>
+                    <li><a href="class-single-cpa.html" title="">CPA Course</a></li>
+                    <li><a href="class-single-frm.html" title="">FRM Course</a></li>
+                    <li><a href="class-single-esg.html" title="">ESG Course</a></li>
+                    <li><a href="class-single-investment-banking.html" title="">Investment Banking</a></li>
+                    <li><a href="class-single-global-investment-banking.html" title="">Global Investment Banking</a></li>
+                    <li><a href="class-single-dipifrs.html" title="">DipIFRS Course</a></li>                  </ul>
                 </div>
                 <!--widget-links end-->
               </div>
@@ -658,7 +658,7 @@
           <div class="bottom-footer">
             <div class="row align-items-center">
               <div class="col-lg-6 col-md-6 col-sm-6">
-                <p>© 2025 CCGE - Corporate Commerce Global Education. All rights reserved. | Developed by <a href="mailto:saitej4865@gmail.com" style="color: #fff;">kssaiteja</a></p>
+                <p>© 2025 CCGE - Corporate Commerce Global Education. All rights reserved.</p>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-6">
                 <ul class="social-links">
