--- a/about.html
+++ b/about.html
@@ -38,19 +38,19 @@
         <div class="container">
           <div class="header-content d-flex flex-wrap align-items-center">
             <div class="logo">
-              <a href="index.html" title="">
-                <img
-                  src="assets/img/logo.png"
-                  alt=""
-                  srcset="assets/img/01_Logo_2x.png 2x"
-                />
-              </a>
+                              <a href="index.html" title="">
+                  <img
+                    src="assets/img/CCGE Final Logo.png"
+                    alt="CCGE - Corporate Commerce Global Education"
+                    style="max-height: 60px; width: auto;"
+                  />
+                </a>
             </div>
             <!--logo end-->
             <ul class="contact-add d-flex flex-wrap">
               <li>
                 <div class="contact-info">
-                  <img src="assets/img/icon1.png" alt="" />
+                  <img src="assets/img/icon1.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                   <div class="contact-tt">
                     <h4>Call</h4>
                     <span>+91 7022878870</span>
@@ -60,7 +60,7 @@
               </li>
               <li>
                 <div class="contact-info">
-                  <img src="assets/img/icon2.png" alt="" />
+                  <img src="assets/img/icon2.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                   <div class="contact-tt">
                     <h4>Work Time</h4>
                     <span>Mon - Sat 9 AM - 7 PM</span>
@@ -70,7 +70,7 @@
               </li>
               <li>
                 <div class="contact-info">
-                  <img src="assets/img/icon3.png" alt="" />
+                  <img src="assets/img/icon3.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                   <div class="contact-tt">
                     <h4>Address</h4>
                     <span>Mumbai, Delhi, Pune, Bangalore</span>
@@ -182,7 +182,7 @@
               </div>
               <div class="col-lg-6 col-md-6">
                 <div class="avt-img">
-                  <img src="https://via.placeholder.com/601x645" alt="" />
+                  <img src="https://via.placeholder.com/601x645" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                 </div>
                 <!--avt-img end-->
               </div>
@@ -190,7 +190,7 @@
             <div class="row align-items-center">
               <div class="col-lg-6 col-md-6">
                 <div class="avt-img">
-                  <img src="https://via.placeholder.com/575x592" alt="" />
+                  <img src="https://via.placeholder.com/575x592" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                 </div>
                 <!--avt-img end-->
               </div>
@@ -245,7 +245,7 @@
                   <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-6">
                       <div class="abt-col">
-                        <img src="assets/img/icon7.png" alt="" />
+                        <img src="assets/img/icon7.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                         <h3>Global Certifications</h3>
                         <p>
                           Internationally recognized qualifications from ACCA,
@@ -256,7 +256,7 @@
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6">
                       <div class="abt-col">
-                        <img src="assets/img/icon9.png" alt="" />
+                        <img src="assets/img/icon9.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                         <h3>24/7 Learning Support</h3>
                         <p>
                           Comprehensive study materials, mock tests, and
@@ -267,7 +267,7 @@
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6">
                       <div class="abt-col">
-                        <img src="assets/img/icon8.png" alt="" />
+                        <img src="assets/img/icon8.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                         <h3>Guaranteed Placement</h3>
                         <p>
                           Direct placement assistance with 1000+ global
@@ -308,7 +308,7 @@
                       class="w-100"
                     />
                     <a href="#" title="" class="crt-btn">
-                      <img src="assets/img/icon10.png" alt="" />
+                      <img src="assets/img/icon10.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                     </a>
                   </div>
                   <div class="class-info">
@@ -322,7 +322,7 @@
                     <span>Weekend & Weekday Batches</span>
                     <div class="d-flex flex-wrap align-items-center">
                       <div class="posted-by">
-                        <img src="https://via.placeholder.com/26x26" alt="" />
+                        <img src="https://via.placeholder.com/26x26" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                         <a href="#" title="">Global Faculty</a>
                       </div>
                       <strong class="price">₹85,000</strong>
@@ -340,7 +340,7 @@
                       class="w-100"
                     />
                     <a href="#" title="" class="crt-btn">
-                      <img src="assets/img/icon10.png" alt="" />
+                      <img src="assets/img/icon10.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                     </a>
                   </div>
                   <div class="class-info">
@@ -351,7 +351,7 @@
                     <span>Weekend & Weekday Batches</span>
                     <div class="d-flex flex-wrap align-items-center">
                       <div class="posted-by">
-                        <img src="https://via.placeholder.com/26x26" alt="" />
+                        <img src="https://via.placeholder.com/26x26" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                         <a href="#" title="">CFA Charterholders</a>
                       </div>
                       <strong class="price">₹95,000</strong>
@@ -369,7 +369,7 @@
                       class="w-100"
                     />
                     <a href="#" title="" class="crt-btn">
-                      <img src="assets/img/icon10.png" alt="" />
+                      <img src="assets/img/icon10.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                     </a>
                   </div>
                   <div class="class-info">
@@ -382,7 +382,7 @@
                     <span>Weekend & Weekday Batches</span>
                     <div class="d-flex flex-wrap align-items-center">
                       <div class="posted-by">
-                        <img src="https://via.placeholder.com/26x26" alt="" />
+                        <img src="https://via.placeholder.com/26x26" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                         <a href="#" title="">CMA Professionals</a>
                       </div>
                       <strong class="price">₹75,000</strong>
@@ -400,7 +400,7 @@
                       class="w-100"
                     />
                     <a href="#" title="" class="crt-btn">
-                      <img src="assets/img/icon10.png" alt="" />
+                      <img src="assets/img/icon10.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                     </a>
                   </div>
                   <div class="class-info">
@@ -413,7 +413,7 @@
                     <span>Weekend & Weekday Batches</span>
                     <div class="d-flex flex-wrap align-items-center">
                       <div class="posted-by">
-                        <img src="https://via.placeholder.com/26x26" alt="" />
+                        <img src="https://via.placeholder.com/26x26" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                         <a href="#" title="">CPA Professionals</a>
                       </div>
                       <strong class="price">₹1,20,000</strong>
@@ -431,7 +431,7 @@
                       class="w-100"
                     />
                     <a href="#" title="" class="crt-btn">
-                      <img src="assets/img/icon10.png" alt="" />
+                      <img src="assets/img/icon10.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                     </a>
                   </div>
                   <div class="class-info">
@@ -445,7 +445,7 @@
                     <span>Weekend & Weekday Batches</span>
                     <div class="d-flex flex-wrap align-items-center">
                       <div class="posted-by">
-                        <img src="https://via.placeholder.com/26x26" alt="" />
+                        <img src="https://via.placeholder.com/26x26" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                         <a href="#" title="">Global Faculty</a>
                       </div>
                       <strong class="price">₹85,000</strong>
@@ -463,7 +463,7 @@
                       class="w-100"
                     />
                     <a href="#" title="" class="crt-btn">
-                      <img src="assets/img/icon10.png" alt="" />
+                      <img src="assets/img/icon10.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                     </a>
                   </div>
                   <div class="class-info">
@@ -476,7 +476,7 @@
                     <span>Weekend & Weekday Batches</span>
                     <div class="d-flex flex-wrap align-items-center">
                       <div class="posted-by">
-                        <img src="https://via.placeholder.com/26x26" alt="" />
+                        <img src="https://via.placeholder.com/26x26" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                         <a href="#" title="">CFA Charterholders</a>
                       </div>
                       <strong class="price">₹95,000</strong>
@@ -494,7 +494,7 @@
                       class="w-100"
                     />
                     <a href="#" title="" class="crt-btn">
-                      <img src="assets/img/icon10.png" alt="" />
+                      <img src="assets/img/icon10.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                     </a>
                   </div>
                   <div class="class-info">
@@ -507,7 +507,7 @@
                     <span>Weekend & Weekday Batches</span>
                     <div class="d-flex flex-wrap align-items-center">
                       <div class="posted-by">
-                        <img src="https://via.placeholder.com/26x26" alt="" />
+                        <img src="https://via.placeholder.com/26x26" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                         <a href="#" title="">CMA Professionals</a>
                       </div>
                       <strong class="price">₹75,000</strong>
@@ -525,7 +525,7 @@
                       class="w-100"
                     />
                     <a href="#" title="" class="crt-btn">
-                      <img src="assets/img/icon10.png" alt="" />
+                      <img src="assets/img/icon10.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                     </a>
                   </div>
                   <div class="class-info">
@@ -538,7 +538,7 @@
                     <span>Weekend & Weekday Batches</span>
                     <div class="d-flex flex-wrap align-items-center">
                       <div class="posted-by">
-                        <img src="https://via.placeholder.com/26x26" alt="" />
+                        <img src="https://via.placeholder.com/26x26" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                         <a href="#" title="">CPA Professionals</a>
                       </div>
                       <strong class="price">₹1,20,000</strong>
@@ -629,7 +629,7 @@
             <div class="row">
               <div class="col-lg-3 col-md-6 col-sm-6">
                 <div class="widget widget-about">
-                  <img src="assets/img/logo.png" alt="" />
+                  <img src="assets/img/CCGE Final Logo.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                   <p>
                     Vivamus porta efficitur nibh nec convallis. Vestibulum
                     egestas eleifend justo. Ut tellus ipsum, accumsan
@@ -642,7 +642,7 @@
                   <ul class="contact-add">
                     <li>
                       <div class="contact-info">
-                        <img src="assets/img/icon1.png" alt="" />
+                        <img src="assets/img/icon1.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                         <div class="contact-tt">
                           <h4>Call</h4>
                           <span>+91 7022878870</span>
@@ -652,7 +652,7 @@
                     </li>
                     <li>
                       <div class="contact-info">
-                        <img src="assets/img/icon2.png" alt="" />
+                        <img src="assets/img/icon2.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                         <div class="contact-tt">
                           <h4>Work Time</h4>
                           <span>Mon - Sat 9 AM - 7 PM</span>
@@ -662,7 +662,7 @@
                     </li>
                     <li>
                       <div class="contact-info">
-                        <img src="assets/img/icon3.png" alt="" />
+                        <img src="assets/img/icon3.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                         <div class="contact-tt">
                           <h4>Address</h4>
                           <span>Mumbai, Delhi, Pune, Bangalore</span>
@@ -676,17 +676,17 @@
               </div>
               <div class="col-lg-3 col-md-6 col-sm-6">
                 <div class="widget widget-links">
-                  <h3 class="widget-title">Quick Links</h3>
+                  <h3 class="widget-title">Our Courses</h3>
                   <ul>
-                    <li><a href="about.html" title="">About Us </a></li>
-                    <li><a href="classes.html" title="">Our Classes</a></li>
-                    <li>
-                      <a href="teachers.html" title="">School Teachers </a>
-                    </li>
-                    <li><a href="events.html" title="">Recent Events </a></li>
-                    <li><a href="blog.html" title="">Our News </a></li>
-                    <li><a href="schedule.html" title="">Schedule </a></li>
-                  </ul>
+                    <li><a href="class-single-acca.html" title="">ACCA Course</a></li>
+                    <li><a href="class-single-cfa.html" title="">CFA Course</a></li>
+                    <li><a href="class-single-cma.html" title="">CMA Course</a></li>
+                    <li><a href="class-single-cpa.html" title="">CPA Course</a></li>
+                    <li><a href="class-single-frm.html" title="">FRM Course</a></li>
+                    <li><a href="class-single-esg.html" title="">ESG Course</a></li>
+                    <li><a href="class-single-investment-banking.html" title="">Investment Banking</a></li>
+                    <li><a href="class-single-global-investment-banking.html" title="">Global Investment Banking</a></li>
+                    <li><a href="class-single-dipifrs.html" title="">DipIFRS Course</a></li>                  </ul>
                 </div>
                 <!--widget-links end-->
               </div>
@@ -704,7 +704,7 @@
           <div class="bottom-footer">
             <div class="row align-items-center">
               <div class="col-lg-6 col-md-6 col-sm-6">
-                <p>© 2025 CCGE - Corporate Commerce Global Education. All rights reserved. | Developed by <a href="mailto:saitej4865@gmail.com" style="color: #fff;">kssaiteja</a></p>
+                <p>© 2025 CCGE - Corporate Commerce Global Education. All rights reserved.</p>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-6">
                 <ul class="social-links">
