--- a/blog.html
+++ b/blog.html
@@ -29,19 +29,19 @@
         <div class="container">
           <div class="header-content d-flex flex-wrap align-items-center">
             <div class="logo">
-              <a href="index.html" title="">
-                <img
-                  src="assets/img/logo.png"
-                  alt=""
-                  srcset="assets/img/01_Logo_2x.png 2x"
-                />
-              </a>
+                              <a href="index.html" title="">
+                  <img
+                    src="assets/img/CCGE Final Logo.png"
+                    alt="CCGE - Corporate Commerce Global Education"
+                    style="max-height: 60px; width: auto;"
+                  />
+                </a>
             </div>
             <!--logo end-->
             <ul class="contact-add d-flex flex-wrap">
               <li>
                 <div class="contact-info">
-                  <img src="assets/img/icon1.png" alt="" />
+                  <img src="assets/img/icon1.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                   <div class="contact-tt">
                     <h4>Call</h4>
                     <span>+91 7022878870</span>
@@ -51,7 +51,7 @@
               </li>
               <li>
                 <div class="contact-info">
-                  <img src="assets/img/icon2.png" alt="" />
+                  <img src="assets/img/icon2.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                   <div class="contact-tt">
                     <h4>Work Time</h4>
                     <span>Mon - Sat 9 AM - 7 PM</span>
@@ -61,7 +61,7 @@
               </li>
               <li>
                 <div class="contact-info">
-                  <img src="assets/img/icon3.png" alt="" />
+                  <img src="assets/img/icon3.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                   <div class="contact-tt">
                     <h4>Address</h4>
                     <span>Mumbai, Delhi, Pune, Bangalore</span>
@@ -199,7 +199,7 @@
                         <li><a href="#" title="">15/01/2025</a></li>
                         <li><a href="#" title="">by Dr. Rajesh Kumar</a></li>
                         <li>
-                          <img src="assets/img/icon13.png" alt="" /><a
+                          <img src="assets/img/icon13.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" /><a
                             href="#"
                             title=""
                             >ACCA,</a
@@ -240,7 +240,7 @@
                         <li><a href="#" title="">12/01/2025</a></li>
                         <li><a href="#" title="">by Priya Sharma</a></li>
                         <li>
-                          <img src="assets/img/icon13.png" alt="" /><a
+                          <img src="assets/img/icon13.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" /><a
                             href="#"
                             title=""
                             >CFA,</a
@@ -274,7 +274,7 @@
                         <li><a href="#" title="">10/01/2025</a></li>
                         <li><a href="#" title="">by Amit Patel</a></li>
                         <li>
-                          <img src="assets/img/icon13.png" alt="" /><a
+                          <img src="assets/img/icon13.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" /><a
                             href="#"
                             title=""
                             >CMA,</a
@@ -335,7 +335,7 @@
                         <li><a href="#" title="">08/01/2025</a></li>
                         <li><a href="#" title="">by Vikram Singh</a></li>
                         <li>
-                          <img src="assets/img/icon13.png" alt="" /><a
+                          <img src="assets/img/icon13.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" /><a
                             href="#"
                             title=""
                             >ESG,</a
@@ -366,7 +366,7 @@
                         <li><a href="#" title="">05/01/2025</a></li>
                         <li><a href="#" title="">by Neha Gupta</a></li>
                         <li>
-                          <img src="assets/img/icon13.png" alt="" /><a
+                          <img src="assets/img/icon13.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" /><a
                             href="#"
                             title=""
                             >Investment Banking,</a
@@ -391,7 +391,7 @@
                         <li><a href="#" title="">03/01/2025</a></li>
                         <li><a href="#" title="">by Meera Iyer</a></li>
                         <li>
-                          <img src="assets/img/icon13.png" alt="" /><a
+                          <img src="assets/img/icon13.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" /><a
                             href="#"
                             title=""
                             >FRM,</a
@@ -433,7 +433,7 @@
                         <li><a href="#" title="">17/09/2020</a></li>
                         <li><a href="#" title="">by Admin</a></li>
                         <li>
-                          <img src="assets/img/icon13.png" alt="" /><a
+                          <img src="assets/img/icon13.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" /><a
                             href="#"
                             title=""
                             >Teachers,</a
@@ -473,7 +473,7 @@
                         <li><a href="#" title="">17/09/2020</a></li>
                         <li><a href="#" title="">by Admin</a></li>
                         <li>
-                          <img src="assets/img/icon13.png" alt="" /><a
+                          <img src="assets/img/icon13.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" /><a
                             href="#"
                             title=""
                             >Teachers,</a
@@ -508,7 +508,7 @@
                         <li><a href="#" title="">17/09/2020</a></li>
                         <li><a href="#" title="">by Admin</a></li>
                         <li>
-                          <img src="assets/img/icon13.png" alt="" /><a
+                          <img src="assets/img/icon13.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" /><a
                             href="#"
                             title=""
                             >Teachers,</a
@@ -573,7 +573,7 @@
                         <li><a href="#" title="">17/09/2020</a></li>
                         <li><a href="#" title="">by Admin</a></li>
                         <li>
-                          <img src="assets/img/icon13.png" alt="" /><a
+                          <img src="assets/img/icon13.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" /><a
                             href="#"
                             title=""
                             >Teachers,</a
@@ -628,7 +628,7 @@
                   <form>
                     <input type="text" name="search" placeholder="Search" />
                     <button type="submit">
-                      <img src="assets/img/icon4.png" alt="" />
+                      <img src="assets/img/icon4.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                     </button>
                   </form>
                 </div>
@@ -660,7 +660,7 @@
                   <div class="wd-posts">
                     <div class="wd-post d-flex flex-wrap">
                       <div class="wd-thumb">
-                        <img src="https://via.placeholder.com/52x52" alt="" />
+                        <img src="https://via.placeholder.com/52x52" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                       </div>
                       <div class="wd-info">
                         <h3>
@@ -674,7 +674,7 @@
                     <!--wd-post end-->
                     <div class="wd-post d-flex flex-wrap">
                       <div class="wd-thumb">
-                        <img src="https://via.placeholder.com/52x52" alt="" />
+                        <img src="https://via.placeholder.com/52x52" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                       </div>
                       <div class="wd-info">
                         <h3>
@@ -688,7 +688,7 @@
                     <!--wd-post end-->
                     <div class="wd-post d-flex flex-wrap">
                       <div class="wd-thumb">
-                        <img src="https://via.placeholder.com/52x52" alt="" />
+                        <img src="https://via.placeholder.com/52x52" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                       </div>
                       <div class="wd-info">
                         <h3>
@@ -921,7 +921,7 @@
             <div class="row">
               <div class="col-lg-3 col-md-6 col-sm-6">
                 <div class="widget widget-about">
-                  <img src="assets/img/logo.png" alt="" />
+                  <img src="assets/img/CCGE Final Logo.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                   <p>
                     Vivamus porta efficitur nibh nec convallis. Vestibulum
                     egestas eleifend justo. Ut tellus ipsum, accumsan
@@ -934,7 +934,7 @@
                   <ul class="contact-add">
                     <li>
                       <div class="contact-info">
-                        <img src="assets/img/icon1.png" alt="" />
+                        <img src="assets/img/icon1.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                         <div class="contact-tt">
                           <h4>Call</h4>
                           <span>+2 342 5446 67</span>
@@ -944,7 +944,7 @@
                     </li>
                     <li>
                       <div class="contact-info">
-                        <img src="assets/img/icon2.png" alt="" />
+                        <img src="assets/img/icon2.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                         <div class="contact-tt">
                           <h4>Work Time</h4>
                           <span>Mon - Fri 8 AM - 5 PM</span>
@@ -954,7 +954,7 @@
                     </li>
                     <li>
                       <div class="contact-info">
-                        <img src="assets/img/icon3.png" alt="" />
+                        <img src="assets/img/icon3.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
                         <div class="contact-tt">
                           <h4>Address</h4>
                           <span>Franklin St, Greenpoint Ave</span>
@@ -968,17 +968,17 @@
               </div>
               <div class="col-lg-3 col-md-6 col-sm-6">
                 <div class="widget widget-links">
-                  <h3 class="widget-title">Quick Links</h3>
+                  <h3 class="widget-title">Our Courses</h3>
                   <ul>
-                    <li><a href="about.html" title="">About Us </a></li>
-                    <li><a href="classes.html" title="">Our Classes</a></li>
-                    <li>
-                      <a href="teachers.html" title="">School Teachers </a>
-                    </li>
-                    <li><a href="events.html" title="">Recent Events </a></li>
-                    <li><a href="blog.html" title="">Our News </a></li>
-                    <li><a href="schedule.html" title="">Schedule </a></li>
-                  </ul>
+                    <li><a href="class-single-acca.html" title="">ACCA Course</a></li>
+                    <li><a href="class-single-cfa.html" title="">CFA Course</a></li>
+                    <li><a href="class-single-cma.html" title="">CMA Course</a></li>
+                    <li><a href="class-single-cpa.html" title="">CPA Course</a></li>
+                    <li><a href="class-single-frm.html" title="">FRM Course</a></li>
+                    <li><a href="class-single-esg.html" title="">ESG Course</a></li>
+                    <li><a href="class-single-investment-banking.html" title="">Investment Banking</a></li>
+                    <li><a href="class-single-global-investment-banking.html" title="">Global Investment Banking</a></li>
+                    <li><a href="class-single-dipifrs.html" title="">DipIFRS Course</a></li>                  </ul>
                 </div>
                 <!--widget-links end-->
               </div>
@@ -996,7 +996,7 @@
           <div class="bottom-footer">
             <div class="row align-items-center">
               <div class="col-lg-6 col-md-6 col-sm-6">
-                <p>© 2025 CCGE - Corporate Commerce Global Education. All rights reserved. | Developed by <a href="mailto:saitej4865@gmail.com" style="color: #fff;">kssaiteja</a></p>
+                <p>© 2025 CCGE - Corporate Commerce Global Education. All rights reserved.</p>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-6">
                 <ul class="social-links">
