--- a/class-single-acca.html
+++ b/class-single-acca.html
@@ -749,7 +749,7 @@
 				<div class="header-content d-flex flex-wrap align-items-center">
 					<div class="logo">
 						<a href="index.html" title="">
-							<img src="assets/img/logo.png" alt="" srcset="assets/img/01_Logo_2x.png 2x"> 
+							<img src="assets/img/CCGE Final Logo.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 60px; width: auto;"> 
 						</a>
 					</div>
 					<ul class="contact-add d-flex flex-wrap">
@@ -1217,7 +1217,7 @@
 					<div class="row">
 						<div class="col-lg-3 col-md-6 col-sm-6">
 							<div class="widget widget-about">
-								<img src="assets/img/logo.png" alt="" />
+								<img src="assets/img/CCGE Final Logo.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
 								<p>
 									Based in Hyderabad, CCGE is dedicated to empowering finance and accounting professionals 
 									to reach new heights in their careers. Our mission is to provide accessible, 
@@ -1230,7 +1230,7 @@
 								<ul class="contact-add">
 									<li>
 										<div class="contact-info">
-											<img src="assets/img/icon1.png" alt="" />
+											<img src="assets/img/icon1.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
 											<div class="contact-tt">
 												<h4>Call</h4>
 												<span>96666 60713 / 14</span>
@@ -1239,7 +1239,7 @@
 									</li>
 									<li>
 										<div class="contact-info">
-											<img src="assets/img/icon2.png" alt="" />
+											<img src="assets/img/icon2.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
 											<div class="contact-tt">
 												<h4>Work Time</h4>
 												<span>Mon - Sat 9 AM - 7 PM</span>
@@ -1248,7 +1248,7 @@
 									</li>
 									<li>
 										<div class="contact-info">
-											<img src="assets/img/icon3.png" alt="" />
+											<img src="assets/img/icon3.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
 											<div class="contact-tt">
 												<h4>Address</h4>
 												<span>Hyderabad, India</span>
@@ -1260,15 +1260,17 @@
 						</div>
 						<div class="col-lg-3 col-md-6 col-sm-6">
 							<div class="widget widget-links">
-								<h3 class="widget-title">Quick Links</h3>
+								<h3 class="widget-title">Our Courses</h3>
 								<ul>
-									<li><a href="about.html" title="">About Us </a></li>
-									<li><a href="classes.html" title="">Our Courses</a></li>
-									<li><a href="teachers.html" title="">Our Faculty </a></li>
-									<li><a href="events.html" title="">Recent Events </a></li>
-									<li><a href="blog.html" title="">Resources </a></li>
-									<li><a href="schedule.html" title="">Schedule </a></li>
-								</ul>
+                    <li><a href="class-single-acca.html" title="">ACCA Course</a></li>
+                    <li><a href="class-single-cfa.html" title="">CFA Course</a></li>
+                    <li><a href="class-single-cma.html" title="">CMA Course</a></li>
+                    <li><a href="class-single-cpa.html" title="">CPA Course</a></li>
+                    <li><a href="class-single-frm.html" title="">FRM Course</a></li>
+                    <li><a href="class-single-esg.html" title="">ESG Course</a></li>
+                    <li><a href="class-single-investment-banking.html" title="">Investment Banking</a></li>
+                    <li><a href="class-single-global-investment-banking.html" title="">Global Investment Banking</a></li>
+                    <li><a href="class-single-dipifrs.html" title="">DipIFRS Course</a></li>								</ul>
 							</div>
 						</div>
 						<div class="col-lg-3 col-md-6 col-sm-6">
@@ -1281,7 +1283,7 @@
 				<div class="bottom-footer">
 					<div class="row align-items-center">
 						<div class="col-lg-6 col-md-6 col-sm-6">
-							<p>© 2025 CCGE - Corporate Commerce Global Education. All rights reserved. | Developed by <a href="mailto:saitej4865@gmail.com" style="color: #fff;">kssaiteja</a></p>
+							                <p>© 2025 CCGE - Corporate Commerce Global Education. All rights reserved.</p>
 						</div>
 						<div class="col-lg-6 col-md-6 col-sm-6">
 							<ul class="social-links">
