--- a/error.html
+++ b/error.html
@@ -25,19 +25,19 @@
 				<div class="container">
 					<div class="header-content d-flex flex-wrap align-items-center">
 						<div class="logo">
-							<a href="index.html" title="">
-								<img
-									src="assets/img/logo.png"
-									alt=""
-									srcset="assets/img/01_Logo_2x.png 2x"
-								/>
-							</a>
+							                <a href="index.html" title="">
+                  <img
+                    src="assets/img/CCGE Final Logo.png"
+                    alt="CCGE - Corporate Commerce Global Education"
+                    style="max-height: 60px; width: auto;"
+                  />
+                </a>
 						</div>
 						<!--logo end-->
 						<ul class="contact-add d-flex flex-wrap">
 							<li>
 								<div class="contact-info">
-									<img src="assets/img/icon1.png" alt="" />
+									<img src="assets/img/icon1.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
 									<div class="contact-tt">
 										<h4>Call</h4>
 										<span>+91 7022878870</span>
@@ -47,7 +47,7 @@
 							</li>
 							<li>
 								<div class="contact-info">
-									<img src="assets/img/icon2.png" alt="" />
+									<img src="assets/img/icon2.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
 									<div class="contact-tt">
 										<h4>Work Time</h4>
 										<span>Mon - Sat 9 AM - 7 PM</span>
@@ -57,7 +57,7 @@
 							</li>
 							<li>
 								<div class="contact-info">
-									<img src="assets/img/icon3.png" alt="" />
+									<img src="assets/img/icon3.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
 									<div class="contact-tt">
 										<h4>Address</h4>
 										<span>Mumbai, Delhi, Pune, Bangalore</span>
